<resources>
    <string name="app_name">Pratilipi</string>

    <!-- Strings used in showNoConnectionDialog -->
    <string name="no_connection">Please enable internet to fetch latest contents.</string>
    <string name="no_connection_title">No Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="loading">Loading ...</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_content_language">Content Language</string>
    <string name="action_change_menu_language">Menu Language</string>
    <string name="action_index">Index</string>
    <string name="action_font_size_decrease">Decrease Font Size</string>
    <string name="action_font_size_increase">Increase Font Size</string>

    <string name="action_search">Search</string>
    <string name="action_search_queryHint">Search Pratilipi</string>

    <!-- Choose Language String -->
    <string name="choose_language">Choose Language</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">com.pratilipi.android</string>
    <string name="content_authority">com.pratilipi.android.pratilipi_and.app</string>

    <!-- Home fragment String -->
    <string name="view_all">View All</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_user_register">Register</string>

    <!-- User Authentication Form Labels -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Create Account</string>
    <string name="login_button">Log In</string>
    <string name="title_activity_card_list">CardListActivity</string>

    <string name="string_no_result">No results!</string>
    <string name="string_free">FREE</string>

    <string name="category_id_tag">category_id</string>
    <string name="category_name_tag">category_name</string>

    <!-- Facebook appId -->
    <string name="app_id">293990794105516</string>

    <string name="Login_Shelf">Please Login to access Shelf !!</string>
    <string name="Sign_up_with_fb">Sign up with Facebook</string>

    <string name="Sign_In"><u><i>Sign In</i></u></string>
    <string name="title_activity_reader">ReaderActivity</string>

</resources>
