<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_font_size_decrease"
        android:icon="@drawable/ic_decrease_font_size"
        android:title="@string/action_font_size_decrease"
        app:showAsAction="always"
        android:orderInCategory="1"
        />

    <item android:id="@+id/action_font_size_increase"
        android:icon="@drawable/ic_increase_font_size"
        android:title="@string/action_font_size_increase"
        app:showAsAction="always"
        android:orderInCategory="2"
        />

    <item android:id="@+id/action_index"
        android:icon="@drawable/ic_hamburger"
        android:title="@string/action_index"
        app:showAsAction="always"
        android:orderInCategory="4"/>

</menu>