<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pratilipi.android.pratilipi_and.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.15"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.70">

            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/user_login_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textEmailAddress"
                android:background="@color/pratilipi_textbox_background"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/user_login_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:background="@color/pratilipi_textbox_background"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/user_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:textColor="@color/pratilipi_white"
                android:background="@color/pratilipi_button_background"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.15"/>

    </LinearLayout>


</ScrollView>
